@@ -1,5 +1,6 @@
 == 0.7.3
 * Don't colorize stdout by default
+* Deactivate rocket for common system commands
 
 == 0.7.2
 * Fix a small bug that happens if there was no last line
